[package]
name = "ascii_converter"
version = "0.1.0"
authors = ["Brandon Campbell <BrandonCampbell98@hotmail.co.uk>"]
edition = "2018"

description  = "A library for converting  between different ascii representations"
homepage  =  ""
documentation =  ""
repository  = "https://github.com/BrandonC98/ascii-converter"
readme = "README.md"

