[package]
name = "ascii_converter"
version = "0.2.2"
authors = ["Brandon Campbell <BrandonCampbell98@hotmail.co.uk>"]
edition = "2018"

description  = "A library for converting  between different ascii representations"
keywords = ["ascii", "converter", "binary", "hexadecimal"]
exclude = [".vscode/*"]
homepage  =  "https://github.com/BrandonC98/ascii_converter"
repository  = "https://github.com/BrandonC98/ascii_converter"
documentation = "https://docs.rs/ascii_converter"
readme = "README.md"
license = "MIT"